--- a/Forecourt Operations App/Storyboard/Base.lproj/Main.storyboard
+++ b/Forecourt Operations App/Storyboard/Base.lproj/Main.storyboard
@@ -463,7 +463,7 @@
                                                         <constraint firstAttribute="height" constant="50" id="MK7-ZW-Nap"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -503,7 +503,7 @@
                                                         <constraint firstAttribute="height" constant="50" id="Bdl-OP-dz4"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
